Safari365 Prod/src/objects/Payment__c.object
<CustomObject>
    <description>Payments Against a Quote</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>17</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_Notes__c</fullName>
        <label>Client Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Notes__c</fullName>
        <label>Internal Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <label>Method</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Bank Transfer</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quotation__c</fullName>
        <label>Quotation</label>
        <referenceTo>Quotations__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Received_Date__c</fullName>
        <description>Payment Received Date</description>
        <label>Received Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Payment</label>
    <nameField>
        <displayFormat>PMT-{0000000}</displayFormat>
        <label>Payment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <recordTypes>
        <fullName>Payments</fullName>
        <active>true</active>
        <label>Payments</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>